--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-# ReidnPatchen.github.io
+#ReidnPatchen.github.io
+<html>
+<head>
+  <title>
+    <style>
+    </style>
+</head>
+  <body>
+  </body>
+  </html>
+    
+
 Hello this is my file
 
   
