--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     </style>
 </head>
   <body>
+    <p>Hi! My name is Dahomey and below you can find a link to my FreecodeCamp account.</br>
+    <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a>
   </body>
   </html>
     
 
-Hello this is my file
+
+
 
   
-</p>Hi! My name is Dahomey and below you can find a link to my FreecodeCamp account.</br>
+
  
-<a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a>
+
