--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-#ReidnPatchen.github.io
+<!DOCTYPE html>
+<!--#ReidnPatchen.github.io-->
 <html>
 <head>
-  <title>
+  <title>Using what I am learning</title>
     <style>
     </style>
 </head>
   <body>
-    <p>Hi! My name is Dahomey and below you can find a link to my FreecodeCamp account.</br>
-    <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a>
+    <h1>Dahomey....(rhymes with Naomi)</h2>
+   <div>
+    <p>A bit about me!</br>
+    <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
+   </div>
+   <div>
+     <p>elemakedleormakermakjemfieamkdlajei jdae</br>
+  <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
+   </div>
+    <div>
+     <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
+     </p>
+  </div>
   </body>
   </html>
     
