--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     </style>
 </head>
   <body>
-    <h1>Dahomey....(rhymes with Naomi)</h2>
-   <div>
-    <p>A bit about me!</br>
+    <div>
+    <p>A BIT ABOUT ME!</br>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
    </div>
    <div>
-     <p>elemakedleormakermakjemfieamkdlajei jdae</br>
-  <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
+     <p>MY PHILOSOPHY</br>
+    <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
    </div>
     <div>
+     <p>MY LINKS</br>
      <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
      </p>
   </div>
