--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
   <title>Using what I am learning</title>
     <style>
+      .body {
+        background-color: yellow;
+      }
+      .text {
+        text-align: center;
+        font-size: 20pt;
+        background color: white;
+      }
+      
     </style>
 </head>
   <body>
+    <h1>Dahomey</h>
     <div>
-    <p>A BIT ABOUT ME!</br>
+    <p class="text">A BIT ABOUT ME!</br>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
    </div>
    <div>
