--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
   <title>Using what I am learning</title>
     <style>
       .body {
-        background-color: yellow;
+        background-color: #bccad6;
       }
       .text {
         text-align: center;
         font-size: 20pt;
-        background color: white;
+        background color: #fle3dd;
       }
-      
+     
     </style>
 </head>
   <body>
     <h1>Dahomey</h>
     <div>
-    <p class="text">A BIT ABOUT ME!</br>
+    <p class="text">A BIT ABOUT ME!</p>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
    </div>
    <div>
-     <p>MY PHILOSOPHY</br>
+     <p class="text">MY PHILOSOPHY</p>
     <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
    </div>
     <div>
-     <p>MY LINKS</br>
+     <p class="text">MY LINKS</p>
      <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
      </p>
   </div>
