--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         font-size: 20pt;
         background color: #fle3dd;
       }
+      .text2 {
+        text-align: center;
+        font-size: 16pt;
+      }
      
     </style>
 </head>
@@ -19,15 +23,15 @@
     <h1>Dahomey</h>
     <div>
     <p class="text">A BIT ABOUT ME!</p>
-    <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
+    <p class="text2">keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
    </div>
    <div>
      <p class="text">MY PHILOSOPHY</p>
-    <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
+    <p class="text2">jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
    </div>
     <div>
      <p class="text">MY LINKS</p>
-     <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
+     <p class="text2"><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
      </p>
   </div>
   </body>
