--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         font-size: 20pt;
         background color: #fle3dd;
       }
-      .text2 {
+      p {
         text-align: center;
-        font-size: 16pt;
       }
      
     </style>
@@ -23,15 +22,15 @@
     <h1>Dahomey</h>
     <div>
     <p class="text">A BIT ABOUT ME!</p>
-    <p class="text2">keksjejisk mdksjeirjeiwjskmdiejrwmkd </p>
+    <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd</p>
    </div>
    <div>
      <p class="text">MY PHILOSOPHY</p>
-    <p class="text2">jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
+    <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
    </div>
     <div>
      <p class="text">MY LINKS</p>
-     <p class="text2"><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
+     <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
      </p>
   </div>
   </body>
