--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
   <title>Using what I am learning</title>
     <style>
+      h1 {
+        text-align: center;
+        color: #fle3dd;
+        font-size: 25pt
+        border: 1px solid black;
+        margin: 10px
+      }
       .body {
         background-color: #bccad6;
       }
