--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <style>
       h1 {
         text-align: center;
-        color: #fle3dd;
-        font-size: 25pt
-        border: 1px solid black;
-        margin: 10px
+        color: brown;
+        font-size: 25pt    
       }
       .body {
-        background-color: #bccad6;
+        background-color: tan;
       }
       .text {
         text-align: center;
         font-size: 20pt;
-        background color: #fle3dd;
+        background color: black;
       }
       p {
         text-align: center;
@@ -26,7 +24,7 @@
     </style>
 </head>
   <body>
-    <h1>Dahomey</h>
+    <h1>Dahomey</h1>
     <div>
     <p class="text">A BIT ABOUT ME!</p>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd</p>
