--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       h1 {
         text-align: center;
         color: brown;
-        font-size: 25pt    
+        font-size: 25pt
+        border: 1px solid brown;
       }
       .body {
         background-color: tan;
