--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         text-align: center;
         color: brown;
         font-size: 25pt
-        border: 1px solid brown;
+        border: 1px;
       }
       .body {
         background-color: tan;
@@ -16,7 +16,7 @@
       .text {
         text-align: center;
         font-size: 20pt;
-        background color: black;
+        background-color: yellow;
       }
       p {
         text-align: center;
@@ -26,7 +26,7 @@
 </head>
   <body>
     <h1>Dahomey</h1>
-    <div>
+    <div style="background-color: yellow;">
     <p class="text">A BIT ABOUT ME!</p>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd</p>
    </div>
