--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
       h1 {
         text-align: center;
         color: brown;
-        font-size: 25pt
-        border: 1px;
+        font-size: 40pt
       }
       .body {
-        background-color: tan;
+        background-color: silver;
       }
       .text {
         text-align: center;
         font-size: 20pt;
-        background-color: yellow;
+        background-color: black;
       }
       p {
         text-align: center;
