--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       h1 {
         text-align: center;
-        color: brown;
+        color: #fle3dd;
         font-size: 40pt
       }
       .body {
@@ -15,7 +15,7 @@
       .text {
         text-align: center;
         font-size: 20pt;
-        background-color: black;
+        background-color: ;
       }
       p {
         text-align: center;
