--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       .text {
         text-align: center;
         font-size: 20pt;
-        background-color: ;
       }
       p {
         text-align: center;
+        color: black;
       }
      
     </style>
@@ -29,11 +29,11 @@
     <p class="text">A BIT ABOUT ME!</p>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd</p>
    </div>
-   <div>
+   <div style="background-color: yellow;">
      <p class="text">MY PHILOSOPHY</p>
     <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
    </div>
-    <div>
+    <div style="background-color: yellow;">
      <p class="text">MY LINKS</p>
      <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
      </p>
