--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       h1 {
         text-align: center;
-        color: #fle3dd;
+        color: brown;
         font-size: 40pt
       }
       .body {
@@ -29,11 +29,11 @@
     <p class="text">A BIT ABOUT ME!</p>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd</p>
    </div>
-   <div style="background-color: yellow;">
+   <div style="background-color: pink;">
      <p class="text">MY PHILOSOPHY</p>
     <p>jdieakjeirm jdjjeijammdkmfkd deijsjifejamfiejf</p>
    </div>
-    <div style="background-color: yellow;">
+    <div style="background-color: cyan;">
      <p class="text">MY LINKS</p>
      <p><a href="https://www.freecodecamp.org/reidnpatchen">FreeCodeCamp</a></p>
      </p>
