--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <style>
       h1 {
         text-align: center;
+        margin: 20px;
+        padding: 10px
         color: brown;
         font-size: 40pt
       }
       .body {
-        background-color: silver;
+        background-color: gray;
       }
       .text {
         text-align: center;
@@ -23,7 +25,7 @@
      
     </style>
 </head>
-  <body>
+  <body class="background-color">
     <h1>Dahomey</h1>
     <div style="background-color: yellow;">
     <p class="text">A BIT ABOUT ME!</p>
