--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         margin: 20px;
         padding: 10px
         color: brown;
-        font-size: 40pt
       }
       .body {
         background-color: gray;
@@ -25,7 +24,7 @@
      
     </style>
 </head>
-  <body class="background-color">
+  <body>
     <h1>Dahomey</h1>
     <div style="background-color: yellow;">
     <p class="text">A BIT ABOUT ME!</p>
