--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
   <body>
-    <h1>Dahomey</h1>
+    <h1 style="color: brown;">Dahomey</h1>
     <div style="background-color: yellow;">
     <p class="text">A BIT ABOUT ME!</p>
     <p>keksjejisk mdksjeirjeiwjskmdiejrwmkd</p>
