--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <title>Using what I am learning</title>
     <style>
       h1 {
+        rgba(45,45,45,0.1>;
         text-align: center;
         margin: 20px;
         padding: 10px
         color: brown;
+        
       }
       .body {
         background-color: gray;
